@@ -5,7 +5,7 @@
 
  JOE looks for this file in:
 	1 - $HOME/.jmacsrc
-	2 - @sysconfdir@/jmacsrc
+	2 - @jrcbefore@jmacsrc@jrcafter@
 
  This file can include other files by placing the following include command
  in the first column:
