@@ -7,7 +7,7 @@
 
  JOE looks for this file in:
 	1 - $HOME/.joerc
-	2 - @sysconfdir@/joerc
+	2 - @jrcbefore@joerc@jrcafter@
 
  This file can include other files by placing the following include command
  in the first column:
