@@ -5,7 +5,7 @@
 
  JOE looks for this file in:
 	1 - $HOME/.jpicorc
-	2 - @sysconfdir@/jpicorc
+	2 - @jrcbefore@jpicorc@jrcafter@
 
  This file can include other files by placing the following include command
  in the first column:
