@@ -5,7 +5,7 @@
 
  JOE looks for this file in:
 	1 - $HOME/.rjoerc
-	2 - @sysconfdir@/rjoerc
+	2 - @jrcbefore@rjoerc@jrcafter@
 
  This file can include other files by placing the following include command
  in the first column:
