@@ -14,6 +14,7 @@ JUPP-current
 - ^Q[ is distinct from ^Q] when ambiguous (jupp, jstar)
 - Unbreak tab-completing filenames with spaces
 - Fix filenames with backslashes
+- configure --enable-sysconfjoesubdir to also get the manual page
 
 JOE 3.1jupp28
 
